typescript/checker/tests/conformance/parser/ecmascript5/Symbols/parserES5SymbolProperty8.ts.stderr
error: TS2585 {
    span: Span {
        lo: BytePos(
            31,
        ),
        hi: BytePos(
            37,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/Symbols/parserES5SymbolProperty8.ts:3:6
  |
3 |     [Symbol.toPrimitive](): string
  |      ^^^^^^

